# JDJGBotSupreme

./: .gitignore  .replit  B.py  ClientConfig.py  DM_Tools.py  DatabaseConfig.py  DatabaseControl.py  GetPfp.py  GlobalLinker.py  JDJG_os.py  LICENSE  LinkerPort.py  NintendoFriendCode.py  Pixman.py  RankSystem.py  Read.md  UpdateNotify.py  _3D.py  _3D_t.py  clear_code.py  color_code.py  emote.py  emote_program.py  inverter.py  jdjg_os.py  keep_alive.py  main.py  pyproject.toml  random_response.py  readme.md  schema.sql  server_settings.py  shadi_code.txt  spy_co.py  swear_checker.py  table.sql  tris.py  userinfo.py
.github/workflows/: ci.yml  codeql-analysis.yml
cogs/: Bot.py  __init__.py  dice.py  extra.py  global.py  help.py  info.py  jsk.py  listeners.py
petpet/: Pet.py
profanity/: __init__.py  config.py
profanity/data/: profanity.json
unused_stuff/: fetch_avatar(all).py  jdjg_os.py  older_linker.py  save_image.py  suspend.py  timezone-stuff.py  unused_code.py  unused_update.py
utils/: extra.py
