[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
Flask = "^2.0.3"
asyncpg = "^0.25.0"
better-profanity = "^0.7.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
